Correcciones de redacción | Lógica

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -120,7 +120,7 @@ $$\text{Si} \vdash P \Rightarrow \ \vDash P $$
 Una teoría formal puede ser completa y sensata, solo completa o sensata e incluso no ser ni completo ni sensata. La sensatez es algo que debe demostrarse, no puede asumirse. Al mismo tiempo una teoría en la cual puede demostrarse todas las formulas bien formadas es completa, pero no sensata. Por otro lado, si una teoría es sensata y completa, entonces verdad es equivalente a deducción (verdad $\Leftrightarrow$ deducción).
 
 >[!tldr] Consistencia de una Teoría Formal
->Una teoría formal $\mathcal{T}$ es consistente si no contiene fórmulas bien formadas tales que tanto las fórmulas como su negación sean teoremas de $\mathcal{T}$.
+>Una teoría formal $\mathcal{T}$ es consistente si no contiene fórmulas bien formadas tales que tanto las fórmulas como sus negaciones sean teoremas de $\mathcal{T}$.
 ## Nociones Computacionales
 Un método computacional se considera _**completo**_ si, dado cualquier enunciado $P$ dentro de una teoría formal $\mathcal{T}$, al tomar $P$ como entrada, el método concluye en un tiempo finito indicando si $P$ es verdadero bajo todas las interpretaciones posibles. Por otro lado, una teoría formal se define como _**decidible**_ si existe un procedimiento efectivo capaz de determinar, para cada enunciado de la teoría, si es probable o no.
 Como podemos observar, estas definiciones son muy similares a las realizadas en la [[2. Maquina Universal de Turing y Computabilidad#Tesis de Turing-Church|Tesis de Turing-Church]], la cual establece cuándo un problema es soluble o no desde un punto de vista computacional.
