--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
@@ -42,22 +42,22 @@ Estas propiedades nos permiten transformar una fórmula bien formada cualquiera 
 >[!tldr] Definición del Lenguaje Clausal
 >Se puede expresar las formas de las sentencias en forma normal conjuntiva reducida aplicando alguna notación como BNF, aunque también se puede interpretar a estas mismas como conjuntos, esto nos ayudará a entender de mejor manera como operan lenguajes lógicos como Prolog.
 ### Deducción por Resolución
-Dado un conjunto de cláusulas $S$, una deducción por resolución de la cláusula $A$, denotada como $S \rightarrow A$, es una secuencia finita de cláusulas $B_1, \cdots, B_n$ donde:
+Dado un conjunto de cláusulas $S$, una deducción por resolución de la cláusula $A$, denotada como $S \rightarrow A$, es una secuencia finita de cláusulas $B_1, \dots, B_n$ donde:
 1. $B_n$ es $A$.
 2. Todo $B_i$ o es elemento de $S$ o $B_i$ es una resolvente de $B_p$ y $B_k$ con $p, k < i$. 
 
 Una deducción por resolución de la cláusula vacía $\Box$ a partir de $S$ se llama refutación por resolución de $S$ o simplemente refutación de $S$.
 Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así, entonces la sentencia es un teorema, de lo contrario esto solo sería una sentencia.
 #### Cláusulas de Horn
-Una cláusula de Horn es una cláusula que posee a lo suma un literal positivo $¬A \vee \cdots \vee ¬A_N \vee B_1$. Estas se puede reescribir de la siguiente manera:
-1. $¬(A \wedge \cdots \wedge A_n) \vee B_1$.
-2. $(A \wedge \cdots \wedge A_n) \rightarrow B_1$.
-3. $B_1 \leftarrow (A \wedge \cdots \wedge A_n)$.
+Una cláusula de Horn es una cláusula que posee a lo suma un literal positivo $¬A \vee \dots \vee ¬A_N \vee B_1$. Estas se puede reescribir de la siguiente manera:
+1. $¬(A \wedge \dots \wedge A_n) \vee B_1$.
+2. $(A \wedge \dots \wedge A_n) \rightarrow B_1$.
+3. $B_1 \leftarrow (A \wedge \dots \wedge A_n)$.
 
 Existen cuatro tipos principales de cláusulas de Horn:
-1. $B_1 \leftarrow (A_1 \wedge \cdots \wedge A_n)$.
+1. $B_1 \leftarrow (A_1 \wedge \dots \wedge A_n)$.
 2. $B_1 \leftarrow$.
-3. $\leftarrow (A_1 \wedge \cdots \wedge A_n)$.
+3. $\leftarrow (A_1 \wedge \dots \wedge A_n)$.
 4. $\perp$.
 
 La primera y segunda cláusula se dicen definidas, aunque la primera recibe el nombre de *reglas* y la segunda recibe el nombre de *hechos*.
