--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
@@ -27,9 +27,9 @@ Tanto para las letras funcionales como para las letras predicativas, $k$ represe
 >5. $\rightarrow$.
 >6. $\equiv$.
 
-En este lenguaje se consideran términos a todas las variables y constantes, además si $f_k^n$ es una letra funcional n-aria y $t_1, t_2 \cdots, t_n$ son términos, entonces $f_k^n(t_1, t_2 \cdots, t_n)$ también es un término.
+En este lenguaje se consideran términos a todas las variables y constantes, además si $f_k^n$ es una letra funcional n-aria y $t_1, t_2 \dots, t_n$ son términos, entonces $f_k^n(t_1, t_2 \dots, t_n)$ también es un término.
 Para el cálculo de predicados, las fórmulas bien formadas pueden ser construidas siguiendo los siguientes esquemas:
-- Si $p_k^n$ es una letra predicativa n-aria y $t_1, t_2 \cdots, t_n$ son términos, entonces $p_k^n(t_1, t_2 \cdots, t_n)$ es una fórmula bien formada denominada ***fórmula atómica*** o ***átomo***.
+- Si $p_k^n$ es una letra predicativa n-aria y $t_1, t_2 \dots, t_n$ son términos, entonces $p_k^n(t_1, t_2 \dots, t_n)$ es una fórmula bien formada denominada ***fórmula atómica*** o ***átomo***.
 - Si $P$ y $Q$ son fórmulas bien formadas y $x$ es una variable, entonces $(¬P)$, $(P \rightarrow Q)$ y $((\forall x)P)$ también son fórmulas bien formadas.
 ## Verdad, Falsedad e Interpretaciones
 En el cálculo proposicional las fórmulas bien formadas solo estaban construidas a partir de letras proposicionales y posiblemente conectivos lógicos. Por esta razón bastaba con asignar un valor de verdad a las letras proposicionales para obtener una interpretación, esto significaba que para explicitar todas las interpretaciones posibles bastaba con construir su tabla de verdad.
