--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
@@ -35,7 +35,7 @@ Aclarado esto, para el cálculo de predicados las reglas de inferencia son simil
 1. Modus ponens $A, A\rightarrow B \vdash B$.
 2. Generalización $A \vdash (\forall x)A$.
 ### Consistencia de la Teoría $\mathcal{P}$
-Sea $A$ una fórmula bien formada que es una instancia de una tautología, entonces $A$ es un teorema de $\mathcal{P}$ el cual puede ser demostrado usando solo los acciones $PC_1$,$PC_2$ y $PC_3$ utilizando solo Modus Ponens como regla de inferencia.
+Sea $A$ una fórmula bien formada que es una instancia de una tautología, entonces $A$ es un teorema de $\mathcal{P}$ el cual puede ser demostrado usando solo los acciones $PC_1$,$PC_2$ y $PC_3$ utilizando solo *modus ponens* como regla de inferencia.
 >[!tldr] Definición de $h(A)$
 >Cada fórmula bien formada $A$ se define a $h(A)$ como la expresión obtenida de $A$ eliminando todos los cuantificadores y términos en ella, eliminando además, los signos auxiliares innecesarios. Por ejemplo $h(¬(\forall x)p(x,f(x)) \rightarrow q(z))$ es equivalente a $¬p \rightarrow q$.
 
