--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
@@ -28,6 +28,8 @@ Una ***Refutación SLD*** de $P \cup \{G\}$ es una derivación-SLD finita de $P 
 
 Sea $P$ un programa definido, $R$ una regla de computación y $G$ una meta definida. Todas las posibles derivaciones SLD pueden representarse en una estructura de tipo árbol denominada ***árbol SLD***.
 La raíz de este árbol es etiquetada como la meta definida $G$ y dado un nodo $n$ etiquetado por la meta definida $Gn$, se crea un nodo $n_i$ para cada meta definida $Gn_i$ que puede obtenerse resolviendo el literal escogido de $R$ con la cabeza de una cláusula perteneciente a $P$.
+![[arbolSLD-ejemplo.png]]
+
 >[!note] Terminología de los Árboles SLD
 >- **Rama de éxito**: Rama que conduce a una refutación.
 >- **Rama de fallo**: Rama que conduce a una consulta cuyo literal seleccionado no puede unificarse con ninguna cláusula del programa.
@@ -53,8 +55,8 @@ Dado un conjunto de cláusulas $S$, definimos el ***Universo o Dominio de Herbra
 >El universo o dominio de Herbrand pueden ser finitos, pero si en $S$ existe al menos una letra funcional su universo de Herbrand pasa a ser infinito. En caso de que se necesite ver un ejemplo ir a las filminas de la cátedra.
 
 Dado un conjunto de cláusulas $S$ definimos la ***Base de Herbrand*** de $S$, denotada como $\mathscr{B}_S$, como el conjunto de átomos fijos conformado por los siguientes componentes:
-$$\mathscr{B}_S = \{p_k^n(t_2, t_2, \dots, t_n)\}$$
-Donde $p_k^n$ es una letra predicativa n-aria perteneciente a $S$ y $t_2, t_2, \dots, t_n$ son términos en $\mathscr{H}_S$. La base de Herbrand va a ser infinita si el universo de Herbrand es infinito.
+$$\mathscr{B}_S = \{p_k^n(t_1, t_2, \dots, t_n)\}$$
+Donde $p_k^n$ es una letra predicativa n-aria perteneciente a $S$ y $t_1, t_2, \dots, t_n$ son términos en $\mathscr{H}_S$. La base de Herbrand va a ser infinita si el universo de Herbrand es infinito.
 ### Saturación y Expansión de Herbrand
 Dado un conjunto de cláusulas $S$ y un conjunto $P$ de términos fijos, entonces la saturación de $S$ sobre $P$, denotado como $P((S))$, es el conjunto que contiene todas las cláusulas fijas que es posible obtener a partir de los elementos de $S$ en los que se reemplazan las variables con los términos que son miembros de $P$. Dichos reemplazos deben ser consistentes, es decir, las apariciones de la misma variable en una cláusula se reemplazan por el mismo término.
 Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo de Herbrand, entonces la saturación de $S$ sobre $\mathscr{H}_S$, es decir, $\mathscr{H}_S((S))$, se denomina ***Expansión de Herbrand*** de $S$.
